tun clean and fix log

--- a/arb/intl_en.arb
+++ b/arb/intl_en.arb
@@ -211,6 +211,8 @@
   "otherContributors": "Other contributors",
   "autoCloseConnections": "Auto close connections",
   "autoCloseConnectionsDesc": "Auto close connections after change node",
+  "cleanupTunInterfaces": "TUN Cleanup",
+  "cleanupTunInterfacesDesc": "Automatically clean up residual virtual network adapter interfaces",
   "onlyStatisticsProxy": "Only statistics proxy",
   "onlyStatisticsProxyDesc": "When turned on, only statistics proxy traffic",
   "pureBlackMode": "Pure black mode",
