--- a/arb/intl_en.arb
+++ b/arb/intl_en.arb
@@ -238,6 +238,9 @@
   "profilesSort": "Profiles sort",
   "start": "Start",
   "stop": "Stop",
+  "powerSwitch": "Power Switch",
+  "checkOrAddProfile": "Please check or add profile",
+  "serviceReady": "Service ready",
   "appDesc": "Processing app related settings",
   "vpnDesc": "Modify VPN related settings",
   "dnsDesc": "Update DNS related settings",
