--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -238,6 +238,9 @@
   "profilesSort": "配置排序",
   "start": "启动",
   "stop": "暂停",
+  "powerSwitch": "启动开关",
+  "checkOrAddProfile": "请检查或添加配置",
+  "serviceReady": "服务已就绪",
   "appDesc": "处理应用相关设置",
   "vpnDesc": "修改VPN相关设置",
   "dnsDesc": "更新DNS相关设置",
