add icmp config

--- a/arb/intl_en.arb
+++ b/arb/intl_en.arb
@@ -306,6 +306,8 @@
   "onlyIcon": "Icon",
   "noIcon": "None",
   "stackMode": "Stack mode",
+  "icmpForwarding": "ICMP Forwarding",
+  "icmpForwardingDesc": "Enable ICMP Ping support",
   "network": "Network",
   "networkDesc": "Modify network-related settings",
   "bypassDomain": "Bypass domain",
