--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -306,6 +306,8 @@
   "onlyIcon": "仅图标",
   "noIcon": "无图标",
   "stackMode": "栈模式",
+  "icmpForwarding": "ICMP转发",
+  "icmpForwardingDesc": "开启后将支持ICMP Ping",
   "network": "网络",
   "networkDesc": "修改网络相关设置",
   "bypassDomain": "排除域名",
