fix and improved

--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -6,7 +6,7 @@
   "proxies": "代理",
   "profile": "配置",
   "profiles": "配置",
-  "tools": "工具",
+  "tools": "更多",
   "logs": "日志",
   "logsDesc": "日志捕获记录",
   "resources": "资源",
@@ -24,7 +24,7 @@
   "settings": "设置",
   "language": "语言",
   "defaultText": "默认",
-  "more": "更多",
+  "more": "查看",
   "other": "其他",
   "about": "关于",
   "en": "英语",
@@ -416,7 +416,7 @@
   "autoSetSystemDns": "自动设置系统DNS",
   "details": "{label}详情",
   "creationTime": "创建时间",
-  "progress": "进度",
+  "progress": "进程",
   "host": "主机",
   "destination": "目标地址",
   "destinationGeoIP": "目标地理定位",
