--- a/arb/intl_en.arb
+++ b/arb/intl_en.arb
@@ -28,6 +28,13 @@
   "other": "Other",
   "otherSettings": "Other Settings",
   "otherSettingsDesc": "Modify other related settings",
+  "smartAutoStop": "Smart Auto-Stop",
+  "smartAutoStopDesc": "Stop VPN when connected to specified intranet",
+  "networkMatch": "Network Match",
+  "networkMatchHint": "Enter IP or CIDR, max 2, comma separated",
+  "smartAutoStopServiceRunning": "Smart Auto-Stop service running",
+  "invalidIpFormat": "Invalid IP or CIDR format",
+  "tooManyRules": "Maximum 2 rules allowed",
   "dozeSuspend": "Doze Suspend",
   "dozeSuspendDesc": "Enable Doze suspend mode support",
   "about": "About",
