--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -28,6 +28,13 @@
   "other": "其他",
   "otherSettings": "其他设置",
   "otherSettingsDesc": "修改其他相关设置",
+  "smartAutoStop": "智能启停",
+  "smartAutoStopDesc": "连接指定内网后停止VPN",
+  "networkMatch": "网络匹配",
+  "networkMatchHint": "输入IP或CIDR，最多2个，逗号分隔",
+  "smartAutoStopServiceRunning": "智能启停服务运行中",
+  "invalidIpFormat": "无效的IP或CIDR格式",
+  "tooManyRules": "最多允许2个规则",
   "dozeSuspend": "休眠支持",
   "dozeSuspendDesc": "开启后同步支持Doze休眠模式",
   "about": "关于",
