--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -52,12 +52,12 @@
   "tunDesc": "仅在管理员模式生效",
   "minimizeOnExit": "退出时最小化",
   "minimizeOnExitDesc": "修改系统默认退出事件",
-  "autoLaunch": "自启动",
+  "autoLaunch": "开机启动",
   "autoLaunchDesc": "跟随系统自启动",
   "silentLaunch": "静默启动",
   "silentLaunchDesc": "后台启动",
-  "autoRun": "自动运行",
-  "autoRunDesc": "应用打开时自动运行",
+  "autoRun": "自动连接",
+  "autoRunDesc": "应用打开后自动连接",
   "logcat": "日志捕获",
   "logcatDesc": "禁用将会隐藏日志入口",
   "autoCheckUpdate": "自动检查更新",
@@ -223,7 +223,7 @@
   "autoCloseConnections": "自动关闭连接",
   "autoCloseConnectionsDesc": "切换节点后自动关闭连接",
   "onlyStatisticsProxy": "仅统计代理",
-  "onlyStatisticsProxyDesc": "开启后，将只统计代理流量",
+  "onlyStatisticsProxyDesc": "开启后将只统计代理流量",
   "pureBlackMode": "纯黑模式",
   "keepAliveIntervalDesc": "TCP保持活动间隔",
   "entries": "个条目",
@@ -371,7 +371,7 @@
   "enableOverride": "启用覆写",
   "saveChanges": "是否保存更改？",
   "generalDesc": "修改通用设置",
-  "findProcessModeDesc": "开启后会有一定性能损耗",
+  "findProcessModeDesc": "开启后会将可以查找进程",
   "tabAnimationDesc": "仅在移动视图中有效",
   "saveTip": "确定要保存吗？",
   "colorSchemes": "配色方案",
@@ -439,5 +439,9 @@
   "proxyChains": "代理链",
   "log": "日志",
   "connection": "连接",
-  "request": "请求"
+  "request": "请求",
+  "switch": "开关",
+  "noStatusAvailable": "未获取到状态",
+  "onlinePanel": "在线面板",
+  "openDashboard": "打开 Dashboard"
 }
