--- a/arb/intl_en.arb
+++ b/arb/intl_en.arb
@@ -66,6 +66,11 @@
   "autoCheckUpdateDesc": "Auto check for updates when the app starts",
   "accessControl": "AccessControl",
   "accessControlDesc": "Configure application access proxy",
+  "clearCacheTitle": "Clear Cache",
+  "clearCacheDesc": "Do you want to clear FakeIP & DNS cache?",
+  "forceGCTitle": "Force Garbage Collection",
+  "forceGCDesc": "Do you want to force kernel garbage collection? Experimental feature, use with caution",
+  "fcmTip": "FCM connection and support depend on the device itself, results are for reference only. Due to Android's underlying permission reasons, on your phone you need to disable the \"Allow Bypass VPN\" option in the network settings to get more accurate results",
   "application": "Application",
   "applicationDesc": "Modify application related settings",
   "edit": "Edit",
