--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -66,6 +66,11 @@
   "autoCheckUpdateDesc": "应用启动时自动检查更新",
   "accessControl": "访问控制",
   "accessControlDesc": "配置应用访问代理",
+  "clearCacheTitle": "清理缓存",
+  "clearCacheDesc": "是否需要清理FakeIP&DNS缓存？",
+  "forceGCTitle": "强制垃圾回收",
+  "forceGCDesc": "是否进行强制内核垃圾回收？实验性功能，请谨慎使用",
+  "fcmTip": "FCM连接和支持取决于设备本身，结果仅供参考。因Android底层权限原因，在手机上您需要关闭网络中的"允许绕过VPN"选项以获得更加准确的结果",
   "application": "应用程序",
   "applicationDesc": "修改应用程序相关设置",
   "edit": "编辑",
