--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -451,6 +451,6 @@
   "noStatusAvailable": "未获取到状态",
   "onlinePanel": "在线面板",
   "openDashboard": "打开 Dashboard",
-  "dazzleMode": "炫彩模式",
+  "dazzleMode": "黑境浮光",
   "wallpaper": "壁纸"
 }
