--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -54,6 +54,8 @@
   "minimizeOnExitDesc": "修改系统默认退出事件",
   "autoLaunch": "开机启动",
   "autoLaunchDesc": "跟随系统自启动",
+  "smartDelayLaunch": "智能延迟",
+  "smartDelayLaunchDesc": "在网络连接以后启动",
   "silentLaunch": "静默启动",
   "silentLaunchDesc": "后台启动",
   "autoRun": "自动连接",
