fix bar add dns

--- a/arb/intl_en.arb
+++ b/arb/intl_en.arb
@@ -281,11 +281,14 @@
   "status": "Status",
   "statusDesc": "System DNS will be used when turned off",
   "preferH3Desc": "Prioritize the use of DOH's http/3",
+  "cacheAlgorithm": "Cache algorithm",
   "respectRules": "Respect rules",
   "respectRulesDesc": "DNS connection following rules",
   "dnsMode": "DNS mode",
   "fakeipRange": "Fakeip range",
+  "fakeipRangeV6": "Fakeip range v6",
   "fakeipFilter": "Fakeip filter",
+  "fakeipTtl": "Fakeip TTL",
   "defaultNameserver": "Default nameserver",
   "defaultNameserverDesc": "For resolving DNS server",
   "nameserver": "Nameserver",
@@ -296,6 +299,9 @@
   "nameserverPolicyDesc": "Specify the corresponding nameserver policy",
   "proxyNameserver": "Proxy nameserver",
   "proxyNameserverDesc": "Domain for resolving proxy nodes",
+  "directNameserver": "Direct nameserver",
+  "directNameserverDesc": "For resolving DIRECT outbound domains",
+  "directNameserverFollowPolicy": "Direct DNS follow policy",
   "fallback": "Fallback",
   "fallbackDesc": "Generally use offshore DNS",
   "fallbackFilter": "Fallback filter",
