--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -281,11 +281,14 @@
   "status": "状态",
   "statusDesc": "关闭后将使用系统DNS",
   "preferH3Desc": "优先使用DOH的http/3",
+  "cacheAlgorithm": "缓存算法",
   "respectRules": "遵守规则",
   "respectRulesDesc": "DNS连接跟随Rules",
   "dnsMode": "DNS模式",
   "fakeipRange": "Fakeip范围",
+  "fakeipRangeV6": "Fakeipv6范围",
   "fakeipFilter": "Fakeip过滤",
+  "fakeipTtl": "Fakeip有效期",
   "defaultNameserver": "默认域名服务器",
   "defaultNameserverDesc": "用于解析DNS服务器",
   "nameserver": "域名服务器",
@@ -296,6 +299,9 @@
   "nameserverPolicyDesc": "指定对应域名服务器策略",
   "proxyNameserver": "代理域名服务器",
   "proxyNameserverDesc": "用于解析代理节点的域名",
+  "directNameserver": "直连域名服务器",
+  "directNameserverDesc": "用于解析DIRECT出口的域名",
+  "directNameserverFollowPolicy": "直连DNS遵循规则",
   "fallback": "Fallback",
   "fallbackDesc": "一般情况下使用境外DNS",
   "fallbackFilter": "Fallback过滤",
