add ntp sniffer

--- a/arb/intl_en.arb
+++ b/arb/intl_en.arb
@@ -278,6 +278,40 @@
   "ruleProviders": "Rule providers",
   "overrideDns": "Override Dns",
   "overrideDnsDesc": "Turning it on will override the DNS options in the profile",
+  "ntp": "NTP",
+  "ntpDesc": "Use built-in NTP time synchronization service",
+  "overrideNtp": "Override NTP",
+  "overrideNtpDesc": "Turning it on will override the NTP options in the profile",
+  "ntpStatus": "Status",
+  "ntpStatusDesc": "Enable NTP time synchronization service",
+  "writeToSystem": "Write to system",
+  "writeToSystemDesc": "Requires administrator privileges",
+  "ntpServer": "Server",
+  "ntpPort": "Port",
+  "ntpInterval": "Update interval",
+  "sniffer": "Sniffer",
+  "snifferDesc": "Modify domain sniffing configuration",
+  "overrideSniffer": "Override Sniffer",
+  "overrideSnifferDesc": "Override Sniffer options in configuration when enabled",
+  "snifferStatus": "Status",
+  "snifferStatusDesc": "Enable domain sniffing service",
+  "forceDnsMapping": "force-dns-mapping",
+  "forceDnsMappingDesc": "Sniff real IP mapping",
+  "parsePureIp": "parse-pure-ip",
+  "parsePureIpDesc": "Sniff unmapped IP addresses",
+  "overrideDestination": "override-destination",
+  "overrideDestinationDesc": "Override connection destination",
+  "httpPortSniffer": "HTTP Port Sniffing",
+  "tlsPortSniffer": "TLS Port Sniffing",
+  "quicPortSniffer": "QUIC Port Sniffing",
+  "forceDomain": "Force Domain Sniffing",
+  "skipDomain": "Skip Domain Sniffing",
+  "skipSrcAddress": "Skip Source Address Sniffing",
+  "skipDstAddress": "Skip Destination Address Sniffing",
+  "snifferPorts": "Ports",
+  "snifferPortsHint": "e.g.: 80, 8080-8880",
+  "snifferDomainHint": "One domain per line",
+  "snifferAddressHint": "One address per line",
   "status": "Status",
   "statusDesc": "System DNS will be used when turned off",
   "preferH3Desc": "Prioritize the use of DOH's http/3",
@@ -388,6 +422,8 @@
   "generalDesc": "Modify general settings",
   "findProcessModeDesc": "There is a certain performance loss after opening",
   "tabAnimationDesc": "Effective only in mobile view",
+  "navBarHapticFeedback": "Haptic feedback",
+  "navBarHapticFeedbackDesc": "Vibration feedback when switching bottom navigation bar",
   "saveTip": "Are you sure you want to save?",
   "colorSchemes": "Color schemes",
   "palette": "Palette",
