--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -278,6 +278,40 @@
   "ruleProviders": "规则提供者",
   "overrideDns": "覆写DNS",
   "overrideDnsDesc": "开启后将覆盖配置中的DNS选项",
+  "ntp": "NTP",
+  "ntpDesc": "使用内置的NTP对时服务",
+  "overrideNtp": "覆写NTP",
+  "overrideNtpDesc": "开启后将覆盖配置中的NTP选项",
+  "ntpStatus": "状态",
+  "ntpStatusDesc": "开启NTP对时服务",
+  "writeToSystem": "写入系统",
+  "writeToSystemDesc": "需要管理员权限",
+  "ntpServer": "服务器",
+  "ntpPort": "端口",
+  "ntpInterval": "更新时间",
+  "sniffer": "Sniffer",
+  "snifferDesc": "修改域名嗅探配置",
+  "overrideSniffer": "覆写Sniffer",
+  "overrideSnifferDesc": "开启后将覆盖配置中的Sniffer选项",
+  "snifferStatus": "状态",
+  "snifferStatusDesc": "开启域名嗅探服务",
+  "forceDnsMapping": "force-dns-mapping",
+  "forceDnsMappingDesc": "对真实 IP 映射嗅探",
+  "parsePureIp": "parse-pure-ip",
+  "parsePureIpDesc": "对未映射 IP 地址嗅探",
+  "overrideDestination": "override-destination",
+  "overrideDestinationDesc": "覆盖连接地址",
+  "httpPortSniffer": "HTTP 端口嗅探",
+  "tlsPortSniffer": "TLS 端口嗅探",
+  "quicPortSniffer": "QUIC 端口嗅探",
+  "forceDomain": "强制域名嗅探",
+  "skipDomain": "跳过域名嗅探",
+  "skipSrcAddress": "跳过来源地址嗅探",
+  "skipDstAddress": "跳过目标地址嗅探",
+  "snifferPorts": "端口",
+  "snifferPortsHint": "例如: 80, 8080-8880",
+  "snifferDomainHint": "每行一个域名",
+  "snifferAddressHint": "每行一个地址",
   "status": "状态",
   "statusDesc": "关闭后将使用系统DNS",
   "preferH3Desc": "优先使用DOH的http/3",
@@ -287,7 +321,7 @@
   "dnsMode": "DNS模式",
   "fakeipRange": "Fakeip范围",
   "fakeipRangeV6": "Fakeipv6范围",
-  "fakeipFilter": "Fakeip过滤",
+  "fakeipFilter": "Fakeip过滤器",
   "fakeipTtl": "Fakeip有效期",
   "defaultNameserver": "默认域名服务器",
   "defaultNameserverDesc": "用于解析DNS服务器",
@@ -300,7 +334,7 @@
   "proxyNameserver": "代理域名服务器",
   "proxyNameserverDesc": "用于解析代理节点的域名",
   "directNameserver": "直连域名服务器",
-  "directNameserverDesc": "用于解析DIRECT出口的域名",
+  "directNameserverDesc": "用于解析直连出口的域名",
   "directNameserverFollowPolicy": "直连DNS遵循规则",
   "fallback": "Fallback",
   "fallbackDesc": "一般情况下使用境外DNS",
@@ -388,6 +422,8 @@
   "generalDesc": "修改通用设置",
   "findProcessModeDesc": "开启后会将可以查找进程",
   "tabAnimationDesc": "仅在移动视图中有效",
+  "navBarHapticFeedback": "触感反馈",
+  "navBarHapticFeedbackDesc": "底部导航栏切换震动反馈",
   "saveTip": "确定要保存吗？",
   "colorSchemes": "配色方案",
   "palette": "调色板",
