--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -279,7 +279,7 @@
   "overrideDns": "覆写DNS",
   "overrideDnsDesc": "开启后将覆盖配置中的DNS选项",
   "ntp": "NTP",
-  "ntpDesc": "使用内置的NTP对时服务",
+  "ntpDesc": "使用NTP对时服务",
   "overrideNtp": "覆写NTP",
   "overrideNtpDesc": "开启后将覆盖配置中的NTP选项",
   "ntpStatus": "状态",
