--- a/arb/intl_en.arb
+++ b/arb/intl_en.arb
@@ -267,7 +267,7 @@
   "dnsDesc": "Update DNS related settings",
   "key": "Key",
   "value": "Value",
-  "hostsDesc": "Add Hosts",
+  "hostsDesc": "Append to current config Hosts",
   "vpnTip": "Changes take effect after restarting the VPN",
   "vpnEnableDesc": "Auto routes all system traffic through VpnService",
   "options": "Options",
@@ -312,6 +312,32 @@
   "snifferPortsHint": "e.g.: 80, 8080-8880",
   "snifferDomainHint": "One domain per line",
   "snifferAddressHint": "One address per line",
+  "tunnel": "Tunnel",
+  "tunnelDesc": "Use traffic forwarding tunnel",
+  "overrideTunnel": "Override Tunnel",
+  "overrideTunnelDesc": "Override Tunnel options in configuration when enabled",
+  "tunnelList": "Forwarding List",
+  "addTunnel": "Add Forwarding",
+  "editTunnel": "Edit Forwarding",
+  "deleteTunnel": "Delete Forwarding",
+  "tunnelNetwork": "Network Protocol",
+  "tunnelNetworkHint": "e.g.: tcp, udp",
+  "tunnelAddress": "Listen Address",
+  "tunnelAddressHint": "e.g.: 127.0.0.1:6553",
+  "tunnelTarget": "Target Address",
+  "tunnelTargetHint": "e.g.: 114.114.114.114:53",
+  "tunnelProxy": "Proxy Name",
+  "tunnelProxyHint": "e.g.: proxy (optional)",
+  "experimental": "Experimental",
+  "experimentalDesc": "Use experimental configuration with caution",
+  "overrideExperimental": "Override Experimental",
+  "overrideExperimentalDesc": "Override experimental configuration options when enabled",
+  "quicGoDisableGso": "Disable Generic Segmentation Offload",
+  "quicGoDisableGsoDesc": "Disable QUIC generic segmentation offload feature",
+  "quicGoDisableEcn": "Disable Explicit Congestion Notification",
+  "quicGoDisableEcnDesc": "Disable QUIC explicit congestion notification feature",
+  "dialerIp4pConvert": "Enable IP4P Address Conversion",
+  "dialerIp4pConvertDesc": "Enable dialer IP4P address conversion feature",
   "status": "Status",
   "statusDesc": "System DNS will be used when turned off",
   "preferH3Desc": "Prioritize the use of DOH's http/3",
@@ -368,6 +394,8 @@
   "stackMode": "Stack mode",
   "icmpForwarding": "ICMP Forwarding",
   "icmpForwardingDesc": "Enable ICMPing Support",
+  "dnsHijack": "DNS Hijack",
+  "dnsHijackDesc": "Redirect DNS queries to internal DNS module",
   "network": "Network",
   "networkDesc": "Modify network-related settings",
   "bypassDomain": "Bypass domain",
