--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -72,7 +72,7 @@
   "clearCacheDesc": "是否需要清理FakeIP&DNS缓存？",
   "forceGCTitle": "强制垃圾回收",
   "forceGCDesc": "是否进行强制内核垃圾回收？实验性功能，请谨慎使用",
-  "fcmTip": "FCM连接和支持取决于设备本身，结果仅供参考。因Android底层权限原因，在手机上您需要关闭网络中的"允许绕过VPN"选项以获得更加准确的结果",
+  "fcmTip": "FCM连接和支持取决于设备本身，显示结果仅供参考。因系统权限原因，您需要关闭网络中的"允许绕过VPN"选项，以获得更加准确的结果",
   "application": "应用程序",
   "applicationDesc": "修改应用程序相关设置",
   "edit": "编辑",
@@ -267,7 +267,7 @@
   "dnsDesc": "更新DNS相关设置",
   "key": "键",
   "value": "值",
-  "hostsDesc": "追加Hosts",
+  "hostsDesc": "追加当前配置Hosts",
   "vpnTip": "重启VPN后改变生效",
   "vpnEnableDesc": "通过VpnService自动路由系统所有流量",
   "options": "选项",
@@ -312,6 +312,32 @@
   "snifferPortsHint": "例如: 80, 8080-8880",
   "snifferDomainHint": "每行一个域名",
   "snifferAddressHint": "每行一个地址",
+  "tunnel": "Tunnel",
+  "tunnelDesc": "使用流量转发隧道",
+  "overrideTunnel": "覆写Tunnel",
+  "overrideTunnelDesc": "开启后将覆盖配置中的Tunnel选项",
+  "tunnelList": "转发列表",
+  "addTunnel": "添加转发",
+  "editTunnel": "编辑转发",
+  "deleteTunnel": "删除转发",
+  "tunnelNetwork": "网络协议",
+  "tunnelNetworkHint": "例如: tcp, udp",
+  "tunnelAddress": "监听地址",
+  "tunnelAddressHint": "例如: 127.0.0.1:6553",
+  "tunnelTarget": "目标地址",
+  "tunnelTargetHint": "例如: 114.114.114.114:53",
+  "tunnelProxy": "代理名称",
+  "tunnelProxyHint": "例如: proxy (可选)",
+  "experimental": "Experimental",
+  "experimentalDesc": "实验性配置请谨慎使用",
+  "overrideExperimental": "覆写Experimental",
+  "overrideExperimentalDesc": "开启后将覆盖配置中的实验性配置",
+  "quicGoDisableGso": "禁用通用分段卸载",
+  "quicGoDisableGsoDesc": "禁用 QUIC 的通用分段卸载功能",
+  "quicGoDisableEcn": "禁用显式拥塞通知",
+  "quicGoDisableEcnDesc": "禁用 QUIC 的显式拥塞通知功能",
+  "dialerIp4pConvert": "启用IP4P地址转换",
+  "dialerIp4pConvertDesc": "启用拨号器的 IP4P 地址转换功能",
   "status": "状态",
   "statusDesc": "关闭后将使用系统DNS",
   "preferH3Desc": "优先使用DOH的http/3",
@@ -368,6 +394,8 @@
   "stackMode": "栈模式",
   "icmpForwarding": "ICMP转发",
   "icmpForwardingDesc": "开启后将支持ICMPing",
+  "dnsHijack": "DNS劫持",
+  "dnsHijackDesc": "将解析导入内部DNS模块",
   "network": "网络",
   "networkDesc": "修改网络相关设置",
   "bypassDomain": "排除域名",
