--- a/arb/intl_en.arb
+++ b/arb/intl_en.arb
@@ -91,6 +91,8 @@
   "just": "Just",
   "qrcode": "QR code",
   "qrcodeDesc": "Scan QR code to obtain profile",
+  "clipboard": "Clipboard",
+  "clipboardDesc": "Auto-get subscription link from clipboard",
   "url": "URL",
   "urlDesc": "Obtain profile through URL",
   "file": "File",
@@ -182,6 +184,10 @@
   "allowBypassDesc": "Some apps can bypass VPN when turned on",
   "externalController": "ExternalController",
   "externalControllerDesc": "Once enabled, the Clash kernel can be controlled on port 9090",
+  "controlSecret": "Control Secret",
+  "controlSecretDesc": "RESTful API access password",
+  "generateSecret": "Generate",
+  "secretCopied": "Secret copied to clipboard",
   "ipv6Desc": "When turned on it will be able to receive IPv6 traffic",
   "app": "App",
   "general": "General",
@@ -294,20 +300,20 @@
   "overrideSniffer": "Override Sniffer",
   "overrideSnifferDesc": "Override Sniffer options in configuration when enabled",
   "snifferStatus": "Status",
-  "snifferStatusDesc": "Enable domain sniffing service",
+  "snifferStatusDesc": "Enable sniffer service settings",
   "forceDnsMapping": "force-dns-mapping",
-  "forceDnsMappingDesc": "Sniff real IP mapping",
+  "forceDnsMappingDesc": "Force DNS mapping",
   "parsePureIp": "parse-pure-ip",
-  "parsePureIpDesc": "Sniff unmapped IP addresses",
+  "parsePureIpDesc": "Parse pure IP connections",
   "overrideDestination": "override-destination",
-  "overrideDestinationDesc": "Override connection destination",
+  "overrideDestinationDesc": "Override target address",
   "httpPortSniffer": "HTTP Port Sniffing",
   "tlsPortSniffer": "TLS Port Sniffing",
   "quicPortSniffer": "QUIC Port Sniffing",
-  "forceDomain": "Force Domain Sniffing",
-  "skipDomain": "Skip Domain Sniffing",
-  "skipSrcAddress": "Skip Source Address Sniffing",
-  "skipDstAddress": "Skip Destination Address Sniffing",
+  "forceDomain": "Force sniff domain",
+  "skipDomain": "Skip domain",
+  "skipSrcAddress": "Skip source IP",
+  "skipDstAddress": "Skip destination IP",
   "snifferPorts": "Ports",
   "snifferPortsHint": "e.g.: 80, 8080-8880",
   "snifferDomainHint": "One domain per line",
@@ -393,7 +399,7 @@
   "noIcon": "None",
   "stackMode": "Stack mode",
   "icmpForwarding": "ICMP Forwarding",
-  "icmpForwardingDesc": "Enable ICMPing Support",
+  "icmpForwardingDesc": "Enable ICMP Ping",
   "dnsHijack": "DNS Hijack",
   "dnsHijackDesc": "Redirect DNS queries to internal DNS module",
   "network": "Network",
