--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -91,6 +91,8 @@
   "just": "刚刚",
   "qrcode": "二维码",
   "qrcodeDesc": "扫描二维码获取配置文件",
+  "clipboard": "剪切板",
+  "clipboardDesc": "自动获取剪切板订阅链接",
   "url": "URL",
   "urlDesc": "通过URL获取配置文件",
   "file": "文件",
@@ -182,6 +184,10 @@
   "allowBypassDesc": "开启后部分应用可绕过VPN",
   "externalController": "外部控制器",
   "externalControllerDesc": "开启后将可以通过9090端口控制Clash内核",
+  "controlSecret": "控制密码",
+  "controlSecretDesc": "RESTful API的访问密码",
+  "generateSecret": "生成",
+  "secretCopied": "密码已复制到剪贴板",
   "ipv6Desc": "开启后将可以接收IPv6流量",
   "app": "应用",
   "general": "常规",
@@ -279,11 +285,11 @@
   "overrideDns": "覆写DNS",
   "overrideDnsDesc": "开启后将覆盖配置中的DNS选项",
   "ntp": "NTP",
-  "ntpDesc": "使用NTP对时服务",
+  "ntpDesc": "使用NTP时间服务",
   "overrideNtp": "覆写NTP",
   "overrideNtpDesc": "开启后将覆盖配置中的NTP选项",
   "ntpStatus": "状态",
-  "ntpStatusDesc": "开启NTP对时服务",
+  "ntpStatusDesc": "开启NTP时间服务",
   "writeToSystem": "写入系统",
   "writeToSystemDesc": "需要管理员权限",
   "ntpServer": "服务器",
@@ -294,20 +300,20 @@
   "overrideSniffer": "覆写Sniffer",
   "overrideSnifferDesc": "开启后将覆盖配置中的Sniffer选项",
   "snifferStatus": "状态",
-  "snifferStatusDesc": "开启域名嗅探服务",
+  "snifferStatusDesc": "开启嗅探服务设置",
   "forceDnsMapping": "force-dns-mapping",
-  "forceDnsMappingDesc": "对真实 IP 映射嗅探",
+  "forceDnsMappingDesc": "强制 DNS 映射",
   "parsePureIp": "parse-pure-ip",
-  "parsePureIpDesc": "对未映射 IP 地址嗅探",
-  "overrideDestination": "override-destination",
-  "overrideDestinationDesc": "覆盖连接地址",
+  "parsePureIpDesc": "解析纯 IP 连接",
+  "overrideDestination": "Override-destination",
+  "overrideDestinationDesc": "覆盖目标地址",
   "httpPortSniffer": "HTTP 端口嗅探",
   "tlsPortSniffer": "TLS 端口嗅探",
   "quicPortSniffer": "QUIC 端口嗅探",
-  "forceDomain": "强制域名嗅探",
-  "skipDomain": "跳过域名嗅探",
-  "skipSrcAddress": "跳过来源地址嗅探",
-  "skipDstAddress": "跳过目标地址嗅探",
+  "forceDomain": "强制嗅探域名",
+  "skipDomain": "跳过域名",
+  "skipSrcAddress": "跳过来源 IP",
+  "skipDstAddress": "跳过目标 IP",
   "snifferPorts": "端口",
   "snifferPortsHint": "例如: 80, 8080-8880",
   "snifferDomainHint": "每行一个域名",
@@ -393,7 +399,7 @@
   "noIcon": "无图标",
   "stackMode": "栈模式",
   "icmpForwarding": "ICMP转发",
-  "icmpForwardingDesc": "开启后将支持ICMPing",
+  "icmpForwardingDesc": "开启后将支持ICMP Ping",
   "dnsHijack": "DNS劫持",
   "dnsHijackDesc": "将解析导入内部DNS模块",
   "network": "网络",
