--- a/arb/intl_en.arb
+++ b/arb/intl_en.arb
@@ -301,12 +301,12 @@
   "overrideSnifferDesc": "Override Sniffer options in configuration when enabled",
   "snifferStatus": "Status",
   "snifferStatusDesc": "Enable sniffer service settings",
-  "forceDnsMapping": "force-dns-mapping",
-  "forceDnsMappingDesc": "Force DNS mapping",
-  "parsePureIp": "parse-pure-ip",
+  "forceDnsMapping": "Force DNS Mapping",
+  "forceDnsMappingDesc": "Force DNS query results to be mapped to connections",
+  "parsePureIp": "Parse Pure IP",
   "parsePureIpDesc": "Parse pure IP connections",
-  "overrideDestination": "override-destination",
-  "overrideDestinationDesc": "Override target address",
+  "overrideDestination": "Override Destination",
+  "overrideDestinationDesc": "Override connection destination with sniffing results",
   "httpPortSniffer": "HTTP Port Sniffing",
   "tlsPortSniffer": "TLS Port Sniffing",
   "quicPortSniffer": "QUIC Port Sniffing",
@@ -338,11 +338,11 @@
   "experimentalDesc": "Use experimental configuration with caution",
   "overrideExperimental": "Override Experimental",
   "overrideExperimentalDesc": "Override experimental configuration options when enabled",
-  "quicGoDisableGso": "Disable Generic Segmentation Offload",
+  "quicGoDisableGso": "Disable QUIC generic segmentation offload",
   "quicGoDisableGsoDesc": "Disable QUIC generic segmentation offload feature",
-  "quicGoDisableEcn": "Disable Explicit Congestion Notification",
+  "quicGoDisableEcn": "Disable QUIC explicit congestion notification",
   "quicGoDisableEcnDesc": "Disable QUIC explicit congestion notification feature",
-  "dialerIp4pConvert": "Enable IP4P Address Conversion",
+  "dialerIp4pConvert": "Enable dialer IP4P address conversion",
   "dialerIp4pConvertDesc": "Enable dialer IP4P address conversion feature",
   "status": "Status",
   "statusDesc": "System DNS will be used when turned off",
