--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -301,12 +301,12 @@
   "overrideSnifferDesc": "开启后将覆盖配置中的Sniffer选项",
   "snifferStatus": "状态",
   "snifferStatusDesc": "开启嗅探服务设置",
-  "forceDnsMapping": "force-dns-mapping",
-  "forceDnsMappingDesc": "强制 DNS 映射",
-  "parsePureIp": "parse-pure-ip",
+  "forceDnsMapping": "强制 DNS 映射",
+  "forceDnsMappingDesc": "强制将 DNS 查询结果映射到连接",
+  "parsePureIp": "解析纯 IP",
   "parsePureIpDesc": "解析纯 IP 连接",
-  "overrideDestination": "Override-destination",
-  "overrideDestinationDesc": "覆盖目标地址",
+  "overrideDestination": "覆盖目标地址",
+  "overrideDestinationDesc": "使用嗅探结果覆盖连接目标地址",
   "httpPortSniffer": "HTTP 端口嗅探",
   "tlsPortSniffer": "TLS 端口嗅探",
   "quicPortSniffer": "QUIC 端口嗅探",
@@ -338,11 +338,11 @@
   "experimentalDesc": "实验性配置请谨慎使用",
   "overrideExperimental": "覆写Experimental",
   "overrideExperimentalDesc": "开启后将覆盖配置中的实验性配置",
-  "quicGoDisableGso": "禁用通用分段卸载",
+  "quicGoDisableGso": "禁用QUIC通用分段卸载",
   "quicGoDisableGsoDesc": "禁用 QUIC 的通用分段卸载功能",
-  "quicGoDisableEcn": "禁用显式拥塞通知",
+  "quicGoDisableEcn": "禁用QUIC显式拥塞通知",
   "quicGoDisableEcnDesc": "禁用 QUIC 的显式拥塞通知功能",
-  "dialerIp4pConvert": "启用IP4P地址转换",
+  "dialerIp4pConvert": "启用拨号IP4P地址转换",
   "dialerIp4pConvertDesc": "启用拨号器的 IP4P 地址转换功能",
   "status": "状态",
   "statusDesc": "关闭后将使用系统DNS",
