--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -37,6 +37,8 @@
   "tooManyRules": "最多允许2个规则",
   "dozeSuspend": "休眠支持",
   "dozeSuspendDesc": "开启后同步支持Doze休眠模式",
+  "storeFix": "商店修复",
+  "storeFixDesc": "修复Play商店下载异常",
   "about": "关于",
   "en": "英语",
   "ja": "日语",
@@ -212,7 +214,7 @@
   "cut": "剪切",
   "copy": "复制",
   "paste": "粘贴",
-  "testUrl": "测速链接",
+  "testUrl": "测试链接",
   "sync": "同步",
   "exclude": "从最近任务中隐藏",
   "excludeDesc": "应用在后台时,从最近任务中隐藏应用",
