--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -215,6 +215,7 @@
   "copy": "复制",
   "paste": "粘贴",
   "testUrl": "测试链接",
+  "customUrl": "自定义URL...",
   "sync": "同步",
   "exclude": "从最近任务中隐藏",
   "excludeDesc": "应用在后台时,从最近任务中隐藏应用",
@@ -305,8 +306,8 @@
   "snifferStatusDesc": "开启嗅探服务设置",
   "forceDnsMapping": "强制 DNS 映射",
   "forceDnsMappingDesc": "强制将 DNS 查询结果映射到连接",
-  "parsePureIp": "解析纯 IP",
-  "parsePureIpDesc": "解析纯 IP 连接",
+  "parsePureIp": "解析纯 IP 连接",
+  "parsePureIpDesc": "解析纯 IP 连接 连接",
   "overrideDestination": "覆盖目标地址",
   "overrideDestinationDesc": "使用嗅探结果覆盖连接目标地址",
   "httpPortSniffer": "HTTP 端口嗅探",
