--- a/arb/intl_en.arb
+++ b/arb/intl_en.arb
@@ -215,6 +215,7 @@
   "copy": "Copy",
   "paste": "Paste",
   "testUrl": "Test url",
+  "customUrl": "Custom URL...",
   "sync": "Sync",
   "exclude": "Hidden from recent tasks",
   "excludeDesc": "When the app is in the background, the app is hidden from the recent task",
