--- a/arb/intl_en.arb
+++ b/arb/intl_en.arb
@@ -63,8 +63,8 @@
   "autoRun": "AutoRun",
   "autoRunDesc": "Auto run when the application is opened",
   "logcat": "Logcat",
-  "logcatDesc": "Disabling will hide the log entry",
-  "enableCrashReport": "Crash analytics",
+  "logcatDesc": "Enabling will show the log entry",
+  "enableCrashReport": "Auto crash analytics",
   "enableCrashReportDesc": "Auto submit app crash logs",
   "autoCheckUpdate": "Auto check updates",
   "autoCheckUpdateDesc": "Auto check for updates when the app starts",
@@ -215,6 +215,8 @@
   "copy": "Copy",
   "paste": "Paste",
   "testUrl": "Test url",
+  "startTest": "Start test",
+  "addProfile": "Add profile",
   "customUrl": "Custom URL...",
   "sync": "Sync",
   "exclude": "Hidden from recent tasks",
@@ -240,7 +242,7 @@
   "otherContributors": "Other contributors",
   "autoCloseConnections": "Auto close connections",
   "autoCloseConnectionsDesc": "Auto close connections after change node",
-  "onlyStatisticsProxy": "Only statistics proxy",
+  "onlyStatisticsProxy": "Proxy traffic statistics",
   "onlyStatisticsProxyDesc": "When turned on, only statistics proxy traffic",
   "pureBlackMode": "Pure black mode",
   "keepAliveIntervalDesc": "Tcp keep alive interval",
