--- a/arb/intl_zh_CN.arb
+++ b/arb/intl_zh_CN.arb
@@ -63,8 +63,8 @@
   "autoRun": "自动连接",
   "autoRunDesc": "应用打开后自动连接",
   "logcat": "日志捕获",
-  "logcatDesc": "禁用将会隐藏日志入口",
-  "enableCrashReport": "崩溃分析",
+  "logcatDesc": "开启后将会显示日志入口",
+  "enableCrashReport": "自动崩溃分析",
   "enableCrashReportDesc": "自动提交应用崩溃日志",
   "autoCheckUpdate": "自动检查更新",
   "autoCheckUpdateDesc": "应用启动时自动检查更新",
@@ -215,6 +215,8 @@
   "copy": "复制",
   "paste": "粘贴",
   "testUrl": "测试链接",
+  "startTest": "一键测试",
+  "addProfile": "添加配置",
   "customUrl": "自定义URL...",
   "sync": "同步",
   "exclude": "从最近任务中隐藏",
@@ -240,7 +242,7 @@
   "otherContributors": "其他贡献者",
   "autoCloseConnections": "自动关闭连接",
   "autoCloseConnectionsDesc": "切换节点后自动关闭连接",
-  "onlyStatisticsProxy": "仅统计代理",
+  "onlyStatisticsProxy": "代理流量统计",
   "onlyStatisticsProxyDesc": "开启后将只统计代理流量",
   "pureBlackMode": "纯黑模式",
   "keepAliveIntervalDesc": "TCP保持活动间隔",
